--- a/css/logo.css
+++ b/css/logo.css
@@ -829,5 +829,18 @@ body {
   .cotizar-btn {
     display: none;
   }
+  .logo-wrapper {
+  height: 100px;            /* The visible height you want */
+  width: auto;
+  overflow: hidden;        
+  display: flex;
+  align-items: center;    
+}
+
+.logo {
+  height: 130px;            
+  object-fit: contain;     
+  display: block;
+}
 }
 
